--- a/PhotographySiteGenerator/PhotographySiteGenerator.csproj
+++ b/PhotographySiteGenerator/PhotographySiteGenerator.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.4.6" />
+    <PackageReference Include="YamlDotNet" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
